--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- THE RIGHT SECTION -->
         <div class="col-12 col-sm-12 col-md-6 h-100">
           <div class="panel bg-dark text-white">
-            <div class="panel-bodyr p-3">
+            <div class="panel-bodyr p-3 mt-4 mt-md-0">
               <p id="nameOutput"></p>
               <p id="ageOutput"></p>
               <p id="themeOutput"></p>
